# fintech-lakehouse

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: generate_data.py
src/config/: __init__.py  base.py  dev.py  prod.py
src/data_generator/: __init__.py  generator.py
src/schemas/: __init__.py  bronze.py  silver.py
src/utils/: __init__.py  alerting.py  data_quality.py  monitoring.py  spark_utils.py
tests/: conftest.py  pytest.ini
tests/unit/: test_alerting.py  test_data_quality.py  test_spark_utils.py
